tests/ui/feature-gates/feature-gate-raw-dylib.stderr
error[E0658]: link kind `raw-dylib` is unstable on x86
  --> $DIR/feature-gate-raw-dylib.rs:3:29
   |
LL | #[link(name = "foo", kind = "raw-dylib")]
   |                             ^^^^^^^^^^^
   |
   = note: see issue #58713 <https://github.com/crablang/crablang/issues/58713> for more information
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
